Test kitchen runs now.  Now some test...

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,7 +3,7 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_solo
+  name: chef_zero
 
 platforms:
   - name: ubuntu-12.04
@@ -12,5 +12,6 @@ platforms:
 suites:
   - name: default
     run_list:
+      - recipe[users::sysadmins]
       - recipe[kedpm-transit::default]
     attributes:
